[gd_scene load_steps=4 format=3 uid="uid://ryqcij7bjuoy"]

[ext_resource type="Script" path="res://hall_of_heroes/hallof_heroes_party_scroll_container.gd" id="1_ajlg1"]
[ext_resource type="FontFile" uid="uid://cicppa12acwpw" path="res://resources/fonts/alagard.ttf" id="2_v48i5"]

[sub_resource type="Theme" id="Theme_kvuux"]
default_font = ExtResource("2_v48i5")
default_font_size = 36

[node name="HallofHeroesPartyScrollContainer" type="ScrollContainer"]
custom_minimum_size = Vector2(1000, 135)
offset_right = 929.0
offset_bottom = 135.0
script = ExtResource("1_ajlg1")

[node name="MainScrollContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="CampaignNameLabel" type="Label" parent="MainScrollContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = SubResource("Theme_kvuux")
text = "Campaign Name"
vertical_alignment = 1

[node name="WinNumberLabel" type="Label" parent="MainScrollContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = SubResource("Theme_kvuux")
text = "Win #1"
vertical_alignment = 1
